# stock-analyzer

./: .env_example  .gitignore  README.md  pyproject.toml
src/: .env  api_client.py  daily_example.json  data_processor.py  local_data_loader.py  main.py  monthly_example.json  weekly_example.json
