[tool.poetry]
name = "stock-analyzer"
version = "0.1.0"
description = ""
authors = ["ZD-MEC <zivdi2273@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.47.1"
requests = "^2.32.4"
pandas = "^2.3.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
